Bug 14848 - Release LDB 2.4.1, 2.3.1, 2.2.2
Summary: Release LDB 2.4.1, 2.3.1, 2.2.2
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: AD: LDB/DSDB/SAMDB (show other bugs)
Version: 4.15.0
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Andrew Bartlett
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks: 14836 14845 14881
  Show dependency treegraph
 
Reported: 2021-09-28 22:40 UTC by Andrew Bartlett
Modified: 2021-11-03 12:11 UTC (History)
3 users (show)

See Also:


Attachments
patch from master backported to 4.14 (40.49 KB, patch)
2021-10-04 09:01 UTC, Andrew Bartlett
abartlet: ci-passed-
Details
patch backported to 4.15 (41.60 KB, patch)
2021-10-12 22:58 UTC, Andrew Bartlett
metze: review-
metze: ci-passed-
Details
patch backported to 4.15 (only) (v2) (40.62 KB, patch)
2021-10-26 00:12 UTC, Andrew Bartlett
metze: review+
abartlet: ci-passed+
Details
patch backported to 4.14 (only) (v2) (40.54 KB, patch)
2021-10-26 01:43 UTC, Andrew Bartlett
metze: review+
abartlet: ci-passed+
Details
patch backported to 4.13 (only) (50.61 KB, patch)
2021-10-27 23:07 UTC, Andrew Bartlett
metze: review+
abartlet: ci-passed+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andrew Bartlett 2021-09-28 22:40:06 UTC
Bug for the backport of ldb 2.4.1 to Samba 4.15
Comment 1 Andrew Bartlett 2021-10-04 09:01:54 UTC
Created attachment 16837 [details]
patch from master backported to 4.14

This brings in the patches for the two dependent bugs and the release commit for 4.14 / ldb 2.3.1.

  * Corrected python behaviour for 'in' for LDAP attributes
      contained as part of ldb.Message (bug 14845)
  * Fix memory handling in ldb.msg_diff (bug 14836)

I'll attach the 4.15 backport once https://gitlab.com/samba-team/samba/-/merge_requests/2187 is approved into master.
Comment 2 Samba QA Contact 2021-10-05 19:58:03 UTC
This bug was referenced in samba master:

76899e236149ff3b86cd9032a3c6bdafe3a2f036
Comment 3 Andrew Bartlett 2021-10-12 22:58:04 UTC
Created attachment 16848 [details]
patch backported to 4.15

This patch for Samba 4.15 brings ldb to the same point as in master.
Comment 4 Stefan Metzmacher 2021-10-25 12:17:20 UTC
Comment on attachment 16848 [details]
patch backported to 4.15

"pyldb: Make ldb.Message containment testing consistent with indexing" causes
the following failure:

TDB_NO_FSYNC=1 make -j test FAIL_IMMEDIATELY=1 SOCKET_WRAPPER_KEEP_PCAP=1 TESTS='samba4.drs.replica_sync.python.promoted_dc' :

[1(0)/1 at 0s] samba4.drs.replica_sync.python(promoted_dc)(promoted_dc:local)                                                                                      
Partition[DC=samba,DC=example,DC=com] objects[225] linked_values[26]                                                                                               
Partition[DC=samba,DC=example,DC=com] objects[226] linked_values[26]                                                                                               
Test Full Sync                                                                                                                                                     
CNF:b651f306-b95c-4654-b20a-b91dbc3b1b72                                                                                                                           
Test Full Sync                                                                                                                                                     
UNEXPECTED(error): samba4.drs.replica_sync.python(promoted_dc).replica_sync.DrsReplicaSyncTestCase.test_ReplConflictsFullSync(promoted_dc:local)                   
REASON: Exception: Exception: Traceback (most recent call last):                                                                                                   
  File "/home/metze/devel/samba/W/v4-15-test/source4/torture/drs/python/replica_sync.py", line 184, in test_ReplConflictsFullSync                                  
    self._check_deleted(self.ldb_dc1, self.ou1)                                                                                                                    
  File "/home/metze/devel/samba/W/v4-15-test/source4/torture/drs/python/replica_sync.py", line 142, in _check_deleted
    self.assertTrue(not(b"objectCategory" in ou_cur))
TypeError: bad argument type for built-in operation
Comment 5 Andrew Bartlett 2021-10-25 19:50:42 UTC
(In reply to Stefan Metzmacher from comment #4)
Bother.  

The issue is the b"" (binary string vs string "")

Sorry for not doing a CI run.
Comment 6 Andrew Bartlett 2021-10-26 00:12:55 UTC
Created attachment 16866 [details]
patch backported to 4.15 (only) (v2)

Trying again, with the test fixes (both tests and fixes to tests) this time.

CI: https://gitlab.com/samba-team/devel/samba/-/pipelines/395272398
Comment 7 Andrew Bartlett 2021-10-26 00:15:55 UTC
Comment on attachment 16837 [details]
patch from master backported to 4.14

CI: https://gitlab.com/samba-team/devel/samba/-/pipelines/395274870
Comment 8 Andrew Bartlett 2021-10-26 00:16:41 UTC
Comment on attachment 16837 [details]
patch from master backported to 4.14

I've checked and the 4.14 patch has the required test fix in it.  Sorry for the bung 4.15 patch.
Comment 9 Andrew Bartlett 2021-10-26 01:38:06 UTC
Comment on attachment 16837 [details]
patch from master backported to 4.14

The @gdb_no_backtrace needs to be removed for 4.14
Comment 10 Andrew Bartlett 2021-10-26 01:43:20 UTC
Created attachment 16867 [details]
patch backported to 4.14 (only) (v2)

CI: https://gitlab.com/samba-team/devel/samba/-/pipelines/395298114
Comment 11 Andrew Bartlett 2021-10-26 01:47:53 UTC
Comment on attachment 16866 [details]
patch backported to 4.15 (only) (v2)

Patch now passes CI.
Comment 12 Stefan Metzmacher 2021-10-26 11:57:21 UTC
Comment on attachment 16867 [details]
patch backported to 4.14 (only) (v2)

Pushed with 'Fix Python docstrings' 02b187303369d3ce0c19dfb72ffa78f86a3911f0 readded
Comment 13 Stefan Metzmacher 2021-10-26 11:59:35 UTC
Comment on attachment 16866 [details]
patch backported to 4.15 (only) (v2)

Pushed with 'Fix Python docstrings' 02b187303369d3ce0c19dfb72ffa78f86a3911f0 readded
Comment 14 Samba QA Contact 2021-10-26 13:04:31 UTC
This bug was referenced in samba v4-14-test:

c1d2a0570dfc697bbdda6047f10da4ea9cf261f8
Comment 15 Samba QA Contact 2021-10-26 15:10:04 UTC
This bug was referenced in samba v4-15-test:

a795e0c84597aa045d011e663dbad3cdabf0f1e6
Comment 16 Samba QA Contact 2021-10-27 13:22:10 UTC
This bug was referenced in samba v4-14-stable (Release samba-4.14.9):

c1d2a0570dfc697bbdda6047f10da4ea9cf261f8
Comment 17 Samba QA Contact 2021-10-27 13:25:12 UTC
This bug was referenced in samba v4-15-stable (Release samba-4.15.1):

a795e0c84597aa045d011e663dbad3cdabf0f1e6
Comment 18 Andrew Bartlett 2021-10-27 23:07:06 UTC
Created attachment 16880 [details]
patch backported to 4.13 (only)

Ideally landing before the 4.13 bronze bit backport at bug 14881 but otherwise needed before the release.

CI here: https://gitlab.com/samba-team/devel/samba/-/pipelines/396977955
Comment 19 Stefan Metzmacher 2021-10-28 07:21:45 UTC
Comment on attachment 16880 [details]
patch backported to 4.13 (only)

Pushed to autobuild
Comment 20 Samba QA Contact 2021-10-28 10:55:15 UTC
This bug was referenced in samba v4-13-test:

f47f0f9f4595ab9e83479b493a1110e602aee4fc
400d04533ab3525f29721dffa137faf096c274e8
0c36416e319e307022d11a915a4ac508c0ab2eea
c7c10298973fbf5b234b372d00296e2d400973a9
d2189833c7ede6ac2cd919c80aaadac14a0a193a
a2e0682d928678f2d9538fc861cba08413e54446
5e9441d55f6b3ddd2c7b4945754f317123b1d318
4d1c5cc73b0c9eee33231713e527792a59c1d364
f45e89e4326666644b5c569808f29d27a537e07f
4ff0a23a04b230bab3454cf88d317304df2cb5cb
65f3e987675d378afd7df4445d04c86d83cde853
64c41d30986a34b3311bc03ffce9a8856c7f4f18
c532b425e739a5a6860e37fd616dc5293cea0f37
74e65d7c06c5eda79105f43d87efcaec09dfbb77
Comment 21 Samba QA Contact 2021-10-29 08:21:47 UTC
This bug was referenced in samba v4-13-stable (Release samba-4.13.13):

f47f0f9f4595ab9e83479b493a1110e602aee4fc
400d04533ab3525f29721dffa137faf096c274e8
0c36416e319e307022d11a915a4ac508c0ab2eea
c7c10298973fbf5b234b372d00296e2d400973a9
d2189833c7ede6ac2cd919c80aaadac14a0a193a
a2e0682d928678f2d9538fc861cba08413e54446
5e9441d55f6b3ddd2c7b4945754f317123b1d318
4d1c5cc73b0c9eee33231713e527792a59c1d364
f45e89e4326666644b5c569808f29d27a537e07f
4ff0a23a04b230bab3454cf88d317304df2cb5cb
65f3e987675d378afd7df4445d04c86d83cde853
64c41d30986a34b3311bc03ffce9a8856c7f4f18
c532b425e739a5a6860e37fd616dc5293cea0f37
74e65d7c06c5eda79105f43d87efcaec09dfbb77
Comment 22 Stefan Metzmacher 2021-11-03 12:11:46 UTC
We also backported the content of 2.4.1 as 2.3.2 and 2.2.3...